--- a/TravelTogether/Views/Shared/_Layout.cshtml
+++ b/TravelTogether/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 
 @{
     var currentUser = await UserManager.GetUserAsync(this.User);
+    var ttUser = (TtUser)currentUser;
     bool? isAuthenthicated = false;
     if (currentUser != null)
     {
@@ -68,7 +69,16 @@
                     </a>
                 </div>
                 <div class="nav-item">
-                    <img class="ui mini rounded image my_layout_profile_picture" src="~/images/default_icon.jpg">
+                    @if (ttUser.ProfileImageId != 0)
+                    {
+                        <img class="ui mini rounded image my_layout_profile_picture"
+                             src="@ttUser.ProfileImageSrc">
+                    }
+                    else
+                    {
+                        <img class="ui mini rounded image my_layout_profile_picture"
+                             src="~/images/default_icon.jpg">
+                    }
                 </div>
                 <div class="nav-item ml-lg-2">
                     <a href="/Account/MyProfile?id=@currentUser.Id">
