--- a/TravelTogether/Views/Home/Index.cshtml
+++ b/TravelTogether/Views/Home/Index.cshtml
@@ -1,10 +1,11 @@
-﻿@model List<TravelTogether.ViewModels.Posts.AllPostsViewModel>
+﻿@model IEnumerable<TravelTogether.ViewModels.Posts.AllPostsViewModel>
 
-@inject UserManager<IdentityUser> UserManager
+@inject UserManager<TtUser> UserManager
 
 @{
     ViewData["Title"] = "Home Page";
     var currentUser = await UserManager.GetUserAsync(this.User);
+    var ttUser = (TtUser)currentUser;
     bool? isAuthenthicated = false;
     if (currentUser != null)
     {
@@ -180,24 +181,52 @@
                                         <span id="postID-@post.Id">@post.Comments.Count() comments</span>
                                     </div>
                                     <div class="extra content">
-                                        @foreach (var comment in post.Comments)
+                                        @foreach (var comment in post.Comments.OrderBy(c => c.Id))
                                         {
                                             <div class="ui comments">
                                                 <div class="comment">
-                                                    <a class="avatar">
-                                                        @if (comment.Sender.ProfileImageId == 0)
+                                                    @if (currentUser.Id == comment.SenderId)
+                                                    {
+                                                        <a href="/Account/MyProfile?id=@comment.SenderId"
+                                                           class="avatar">
+                                                            @if (comment.Sender.ProfileImageId == 0)
+                                                            {
+                                                                <img class="iP" src="@comment.Sender.DefaultImageSrc" />
+                                                            }
+                                                            else
+                                                            {
+                                                                <img class="iP" src="@comment.Sender.ProfileImageSrc" />
+                                                            }
+                                                        </a>
+                                                    }
+                                                    else
+                                                    {
+                                                        <a href="/Account/Profile?id=@comment.SenderId" class="avatar">
+                                                            @if (comment.Sender.ProfileImageId == 0)
+                                                            {
+                                                                <img class="iP" src="@comment.Sender.DefaultImageSrc" />
+                                                            }
+                                                            else
+                                                            {
+                                                                <img class="iP" src="@comment.Sender.ProfileImageSrc" />
+                                                            }
+                                                        </a>
+                                                    }
+                                                    <div class="content">
+                                                        @if (currentUser.Id == comment.SenderId)
                                                         {
-                                                            <img class="iP" src="@comment.Sender.DefaultImageSrc"/>
+                                                            <a href="/Account/MyProfile?id=@comment.SenderId"
+                                                               class="author my_author">
+                                                                @comment.Sender.FirstName @comment.Sender.LastName
+                                                            </a>
                                                         }
                                                         else
                                                         {
-                                                            <img class="iP" src="@comment.Sender.ProfileImageSrc"/>
+                                                            <a href="/Account/Profile?id=@comment.SenderId"
+                                                               class="author my_author">
+                                                                @comment.Sender.FirstName @comment.Sender.LastName
+                                                            </a>
                                                         }
-                                                    </a>
-                                                    <div class="content">
-                                                        <a class="author my_author">
-                                                            @comment.Sender.FirstName @comment.Sender.LastName
-                                                        </a>
                                                         <div class="metadata">
                                                             <div class="date">2 days ago</div>
                                                         </div>
@@ -233,39 +262,27 @@
     @*SideBar*@
     <div class="sidebar bg-dark">
         <div class="ui middle aligned selection list">
-            <div class="item">
-                <img class="ui avatar image" src="~/images/sample.jpg">
-                <div class="content">
-                    <div class="header">Helen</div>
+            @foreach (var friendShip in ttUser.MainUserFriends)
+            {
+                <div class="item">
+                    @if (friendShip.Friend.ProfileImageId == 0)
+                    {
+                        <img class="ui avatar image" src="@friendShip.Friend.DefaultImageSrc">
+                    }
+                    else
+                    {
+                        <img class="ui avatar image" src="@friendShip.Friend.ProfileImageSrc">
+                    }
+                    <div class="content">
+                        <div class="header">@friendShip.Friend.UserName</div>
+                    </div>
+                    <div class="my_content_friendUser">
+                        <i class="envelope outline icon ml-3"></i>
+                        <i class="clone outline icon ml-3"></i>
+                        <i class="trash alternate outline icon ml-3"></i>
+                    </div>
                 </div>
-                <div class="my_content_friendUser">
-                    <i class="envelope outline icon ml-3"></i>
-                    <i class="clone outline icon ml-3"></i>
-                    <i class="trash alternate outline icon ml-3"></i>
-                </div>
-            </div>
-            <div class="item">
-                <img class="ui avatar image" src="~/images/sample.jpg">
-                <div class="content">
-                    <div class="header">Christian</div>
-                </div>
-                <div class="my_content_friendUser">
-                    <i class="envelope outline icon ml-3"></i>
-                    <i class="clone outline icon ml-3"></i>
-                    <i class="trash alternate outline icon ml-3"></i>
-                </div>
-            </div>
-            <div class="item">
-                <img class="ui avatar image" src="~/images/sample.jpg">
-                <div class="content">
-                    <div class="header">Daniel</div>
-                </div>
-                <div class="my_content_friendUser">
-                    <i class="envelope outline icon ml-3"></i>
-                    <i class="clone outline icon ml-3"></i>
-                    <i class="trash alternate outline icon ml-3"></i>
-                </div>
-            </div>
+            }
         </div>
     </div>
 }
@@ -411,6 +428,25 @@ else
         </div>
     </div>
 }
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="d-flex justify-content-center">
+            <div class="ui right floated pagination menu my_pagination_menu">
+                <a class="icon item my_item_pagination">
+                    <i class="left chevron icon"></i>
+                </a>
+                <a href="/Home/Index?page=1" class="item my_item_pagination">1</a>
+                <a href="/Home/Index?page=2" class="item my_item_pagination">2</a>
+                <a href="/Home/Index?page=3" class="item my_item_pagination">3</a>
+                <a href="/Home/Index?page=4" class="item my_item_pagination">4</a>
+                <a class="icon item my_item_pagination">
+                    <i class="right chevron icon"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 
 @*CreatePostModal*@
 <div class="modal fade" id="createPost_Modal">
