--- a/TravelTogether/Views/_ViewImports.cshtml
+++ b/TravelTogether/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using TravelTogether.Models
 @using TravelTogether.ViewModels.Trips
 @using Microsoft.AspNetCore.Identity
+@using X.PagedList
+@using X.PagedList.Mvc.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
