--- a/TravelTogether/Views/Shared/_Layout.cshtml
+++ b/TravelTogether/Views/Shared/_Layout.cshtml
@@ -99,7 +99,10 @@
                                 My Profile
                                 <i class="fas fa-user"></i>
                             </a>
-                            <a href="#" class="font-weight-bold">My Trips <i class="briefcase icon"></i></a>
+                            <a href="/Account/MyTrips?id=@currentUser.Id" class="font-weight-bold">
+                                My Trips
+                                <i class="briefcase icon"></i>
+                            </a>
                             <a href="#" class="font-weight-bold">Friends <i class="fas fa-users"></i></a>
                             <a href="#" class="font-weight-bold">Mesages <i class="fas fa-envelope"></i></a>
                             <hr />
