--- a/TravelTogether/Views/Home/Index.cshtml
+++ b/TravelTogether/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 {
     <div class="row">
         <div class="col-md-8 col-md-12 d-flex justify-content-center">
-            <form method="get" asp-controller="Home" asp-action="Search">
+            <form method="get" asp-controller="Home" asp-action="SearchPosts">
                 <div class="ui icon input my_search">
                     <input type="text" placeholder="Search..." name="searchText" />               
                     <i class="inverted circular search link icon">
