--- a/TravelTogether/Views/Home/Index.cshtml
+++ b/TravelTogether/Views/Home/Index.cshtml
@@ -24,10 +24,10 @@
         <div class="col-md-8 col-md-12 d-flex justify-content-center">
             <form method="get" asp-controller="Home" asp-action="SearchPosts">
                 <div class="ui icon input my_search">
-                    <input type="text" placeholder="Search..." name="searchText" />               
+                    <input type="text" placeholder="Search..." name="searchText" />
                     <i class="inverted circular search link icon">
                         <button class="my_search_btn" type="submit"></button>
-                    </i>                   
+                    </i>
                 </div>
             </form>
             <div class="my_addPost_btn ml-4">
@@ -232,7 +232,7 @@
                                                             </a>
                                                         }
                                                         <div class="metadata">
-                                                            <div class="date">2 days ago</div>
+                                                            <div class="date">comment</div>
                                                         </div>
                                                         <div class="text">
                                                             @comment.CommentContent
